welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:9: error: ';' expected but '(' found.
      gauche();gauche()
            ^